# telegram-to-mattermost

./: README.md  migrate.pl  migrate.py  pyproject.toml  requirements.txt
telegram_to_mattermost/: migrate.py
tests/: conftest.py  test_basic.py  test_timezone.py
tests/mock/: config.yaml  config_tz.yaml  direct_config.yaml
